--- a/index.html
+++ b/index.html
@@ -35,7 +35,7 @@
             <div class="c-about__text--container">
                 <h3 class="c-about__tittle"> About </h3>
                 <p class="c-about__text">
-                    Lorem ipsum dolor sit amet consectetur, adipisicing elit. Dolores, commodi debitis consequatur eius temporibus harum iusto eaque itaque corrupti beatae culpa voluptas, corporis voluptatem placeat ratione magnam similique quos numquam possimus voluptatum voluptatibus, autem ducimus. Amet saepe, aspernatur dolorum vero temporibus, obcaecati facilis maxime ea, impedit quos quasi ipsa quae!, Lorem ipsum dolor sit amet consectetur adipisicing elit. Tenetur non mollitia fuga blanditiis numquam amet neque, ut dolorem vel, itaque perspiciatis iusto aliquam aliquid hic culpa quae vitae veritatis? Sint cum error eos, esse dolore veritatis qui illo harum odio ipsum officia fugit saepe, debitis laudantium temporibus nesciunt facilis voluptates velit illum dolorum! Commodi, repellendus quia neque maiores sunt alias facere fugiat sapiente in tempora eius, impedit officia, repellat magni harum voluptatem esse rem sit quo iste. Modi dolores dignissimos ea nostrum repellendus optio nesciunt repudiandae temporibus nemo blanditiis!
+                    Lorem ipsum dolor sit amet consectetur, adipisicing elit. Dolores, commodi debitis consequatur eius temporibus harum iusto eaque itaque corrupti beatae culpa voluptas, corporis voluptatem placeat ratione magnam similique quos numquam possimus voluptatum voluptatibus, autem ducimus. Amet saepe, aspernatur dolorum vero temporibus, obcaecati facilis maxime ea, impedit quos quasi ipsa quae!, Lorem ipsum dolor sit amet consectetur adipisicing elit. Tenetur non mollitia fuga blanditiis numquam amet neque, ut dolorem vel, itaque perspiciatis iusto aliquam aliquid hic culpa quae vitae veritatis? Sint cum error eos, esse dolore veritatis qui illo harum odio ipsum officia fugit saepe, debitis laudantium temporibus nesciunt facilis voluptates velit illum dolorum! Commodi, repellendus quia neque maiores sunt alias facere fugiat sapiente in tempora eius, impedit officia, repellat magni harum voluptatem esse rem sit quo iste. Modi dolores dignissimos ea nostrum repellendus optio nesciunt repudiandae temporibus nemo quos quasi ipsa quae!, Lorem ipsum dolor sit amet consectetur adipisicing elit. Tenetur non mollitia fuga blanditiis numquam amet neque, ut dolorem vel, itaque perspiciatis iusto aliquam aliquid hic culpa quae vitae veritatis? Sint cum error eos, esse dolore veritatis qui illo harum odio ipsum officia fugit saepe, debitis laudantium temporibus nesciunt facilis voluptates velit illum dolorum! Commodi, repellendus quia neque maiores sunt alias facere fugiat sapiente in tempora eius, impedit officia, repellat magni harum voluptatem esse rem sit quo iste. Modi dolores dignissimos ea nostrum repellendus optio nesciunt repudiandae temporibus nemo blanditiis!
                 </p>
             </div>
         </div>
@@ -48,7 +48,7 @@
                     <div class="film-content">
                         <img class="filmlogo1" src="/images/film1/taxi-driver-seeklogo-3.png" alt="">
                     <p class="film1-paragraf">
-                        Lorem ipsum dolor, sit amet consectetur adipisicing elit. Necessitatibus sit eum nostrum nulla fuga sapiente quam hic unde ducimus quis esse, aliquid debitis non soluta iure ipsum facilis blanditiis. Recusandae nobis natus debitis reprehenderit? Neque ipsa perferendis doloremque in nisi alias amet, molestiae quibusdam incidunt similique corrupti labore repudiandae quae itaque repellat, mollitia vero rerum! Tempore at nulla hic assumenda ipsa ut dolor tempora eveniet neque dolore vel 
+                        Lorem ipsum dolor, sit amet consectetur adipisicing elit. Necessitatibus sit eum nostrum nulla fuga sapiente quam hic unde ducimus quis esse, aliquid debitis non soluta iure ipsum facilis blanditiis. Recusandae nobis natus debitis reprehenderit? Neque ipsa perferendis doloremque in nisi alias amet, molestiae quibusdam incidunt similique corrupti labore repudiandae quae itaque repellat, mollitia vero rerum! Tempore at nulla hic assumenda ipsa ut dolor tempora eveniet neque dolore velLorem ipsum dolor, sit amet consectetur adipisicing elit. Necessitatibus sit eum nostrum nulla fuga sapiente quam hic unde ducimus quis esse, aliquid debitis non soluta iure ipsum facilis blanditiis. Recusandae nobis natus debitis reprehenderit? Neque ipsa perferendis doloremque in nisi alias amet
                     </p>
                     <div class="film1links">
                         <a  href="https://youtu.be/T5IligQP7Fo?si=Bouxpvy0CqXh0l4h" target="_blank">
@@ -76,19 +76,19 @@
                     <div class="film-content">
                         <img class="filmlogo2" src="/images/film2/logo.png" alt="">
                     <p class="film2-paragraf">
-                        Lorem ipsum dolor, sit amet consectetur adipisicing elit. Necessitatibus sit eum nostrum nulla fuga sapiente quam hic unde ducimus quis esse, aliquid debitis non soluta iure ipsum facilis blanditiis. Recusandae nobis natus debitis reprehenderit? Neque ipsa perferendis doloremque in nisi alias amet, molestiae quibusdam incidunt similique corrupti labore repudiandae quae itaque repellat, mollitia vero rerum! Tempore at nulla hic assumenda ipsa ut dolor tempora eveniet neque dolore vel 
+                        Lorem ipsum dolor, sit amet consectetur adipisicing elit. Necessitatibus sit eum nostrum nulla fuga sapiente quam hic unde ducimus quis esse, aliquid debitis non soluta iure ipsum facilis blanditiis. Recusandae nobis natus debitis reprehenderit? Neque ipsa perferendis doloremque in nisi alias amet, molestiae quibusdam incidunt similique corrupti labore repudiandae quae itaque repellat, mollitia vero rerum! Tempore at nulla hic assumenda ipsa ut dolor tempora eveniet neque dolore velLorem ipsum dolor, sit amet consectetur adipisicing elit. Necessitatibus sit eum nostrum nulla fuga sapiente quam hic unde ducimus quis esse, aliquid debitis non soluta iure ipsum facilis blanditiis. Recusandae nobis natus debitis reprehenderit? Neque ipsa perferendis doloremque in nisi alias amet
                     </p>
                     <div class="film2links">
-                        <a  href="https://youtu.be/T5IligQP7Fo?si=Bouxpvy0CqXh0l4h" target="_blank">
+                        <a  href="https://youtu.be/1Expe7hf6MU?si=XaMaKM-FAp6OS3z1" target="_blank">
                             <button class="buttontrailer">
                                 TRAILER
                             </button>
                         </a>
-                        <a href="https://www.imdb.com/title/tt0075314/ratings/?ref_=ext_shr_lnk" target="_blank">
+                        <a href="https://www.imdb.com/title/tt1302006/ratings/?ref_=tt_ov_rt" target="_blank">
                             <img src="/images/Star 2.png" alt="">
                         </a>
-                        <p>8,2/10 <br>
-                            922 mil</p>
+                        <p>7,8/10 <br>
+                            432 mil</p>
                     </div>
                     </div>
                     <div class="input-sair">
@@ -105,19 +105,19 @@
                     <div class="film-content">
                         <img class="filmlogo3" src="/images/film3/logo.png" alt="">
                     <p class="film3-paragraf">
-                        Lorem ipsum dolor, sit amet consectetur adipisicing elit. Necessitatibus sit eum nostrum nulla fuga sapiente quam hic unde ducimus quis esse, aliquid debitis non soluta iure ipsum facilis blanditiis. Recusandae nobis natus debitis reprehenderit? Neque ipsa perferendis doloremque in nisi alias amet, molestiae quibusdam incidunt similique corrupti labore repudiandae quae itaque repellat, mollitia vero rerum! Tempore at nulla hic assumenda ipsa ut dolor tempora eveniet neque dolore vel 
+                        Lorem ipsum dolor, sit amet consectetur adipisicing elit. Necessitatibus sit eum nostrum nulla fuga sapiente quam hic unde ducimus quis esse, aliquid debitis non soluta iure ipsum facilis blanditiis. Recusandae nobis natus debitis reprehenderit? Neque ipsa perferendis doloremque in nisi alias amet, molestiae quibusdam incidunt similique corrupti labore repudiandae quae itaque repellat, mollitia vero rerum! Tempore at nulla hic assumenda ipsa ut dolor tempora eveniet neque dolore velLorem ipsum dolor, sit amet consectetur adipisicing elit. Necessitatibus sit eum nostrum nulla fuga sapiente quam hic unde ducimus quis esse, aliquid debitis non soluta iure ipsum facilis blanditiis. Recusandae nobis natus debitis reprehenderit? Neque ipsa perferendis doloremque in nisi alias amet
                     </p>
                     <div class="film3links">
-                        <a  href="https://youtu.be/T5IligQP7Fo?si=Bouxpvy0CqXh0l4h" target="_blank">
+                        <a  href="https://youtu.be/2ilzidi_J8Q?si=Ix4GP1Eixxr-Az8W" target="_blank">
                             <button class="buttontrailer">
                                 TRAILER
                             </button>
                         </a>
-                        <a href="https://www.imdb.com/title/tt0075314/ratings/?ref_=ext_shr_lnk" target="_blank">
+                        <a href="https://www.imdb.com/title/tt0099685/ratings/?ref_=tt_ov_rt" target="_blank">
                             <img src="/images/Star 2.png" alt="">
                         </a>
-                        <p>8,2/10 <br>
-                            922 mil</p>
+                        <p>8,7/10 <br>
+                            1,3 mi</p>
                     </div>
                     </div>
                     <div class="input-sair">
@@ -134,19 +134,21 @@
                     <div class="film-content">
                         <img class="filmlogo4" src="/images/film1/taxi-driver-seeklogo-3.png" alt="">
                     <p class="film4-paragraf">
-                        Lorem ipsum dolor, sit amet consectetur adipisicing elit. Necessitatibus sit eum nostrum nulla fuga sapiente quam hic unde ducimus quis esse, aliquid debitis non soluta iure ipsum facilis blanditiis. Recusandae nobis natus debitis reprehenderit? Neque ipsa perferendis doloremque in nisi alias amet, molestiae quibusdam incidunt similique corrupti labore repudiandae quae itaque repellat, mollitia vero rerum! Tempore at nulla hic assumenda ipsa ut dolor tempora eveniet neque dolore vel 
+                        Lorem ipsum dolor, sit amet consectetur adipisicing elit. Necessitatibus sit eum nostrum nulla fuga sapiente quam hic unde ducimus quis esse, aliquid debitis non soluta iure ipsum facilis blanditiis. Recusandae nobis natus debitis reprehenderit? Neque ipsa perferendis doloremque in nisi alias amet, molestiae quibusdam incidunt similique corrupti labore repudiandae quae itaque repellat, mollitia vero rerum! Tempore at nulla hic assumenda ipsa ut dolor tempora eveniet neque dolore velLorem ipsum dolor, sit amet consectetur adipisicing elit. Necessitatibus sit eum nostrum nulla fuga sapiente quam hic unde ducimus quis esse, aliquid debitis non soluta iure ipsum facilis blanditiis. Recusandae nobis natus debitis reprehenderit? Neque ipsa perferendis doloremque in nisi alias amet
                     </p>
                     <div class="film4links">
-                        <a  href="https://youtu.be/T5IligQP7Fo?si=Bouxpvy0CqXh0l4h" target="_blank">
+                        <a  href="https://youtu.be/r-MiSNsCdQ4?si=yYaLWtlqytxtssN5" target="_blank">
                             <button class="buttontrailer">
                                 TRAILER
                             </button>
                         </a>
-                        <a href="https://www.imdb.com/title/tt0075314/ratings/?ref_=ext_shr_lnk" target="_blank">
+                        <a href="https://www.imdb.com/title/tt0407887/ratings/?ref_=tt_ov_rt" target="_blank">
                             <img src="/images/Star 2.png" alt="">
                         </a>
-                        <p>8,2/10 <br>
-                            922 mil</p>
+                        <p>8,5
+                            /10 <br>
+                            1,4 mi
+                            </p>
                     </div>
                     </div>
                     <div class="input-sair">
@@ -157,24 +159,26 @@
                     </div>
                 </label>
 
-                <input id="filmcheck2" class="filmcheck2" type="radio" name="film">
-                <label class="film2 film" for="filmcheck2">
+                <input id="filmcheck5" class="filmcheck5" type="radio" name="film">
+                <label class="film5 film" for="filmcheck5">
                     <div class="film-content">
-                        <img class="filmlogo2" src="/images/film2/logo.png" alt="">
-                    <p class="film2-paragraf">
-                        Lorem ipsum dolor, sit amet consectetur adipisicing elit. Necessitatibus sit eum nostrum nulla fuga sapiente quam hic unde ducimus quis esse, aliquid debitis non soluta iure ipsum facilis blanditiis. Recusandae nobis natus debitis reprehenderit? Neque ipsa perferendis doloremque in nisi alias amet, molestiae quibusdam incidunt similique corrupti labore repudiandae quae itaque repellat, mollitia vero rerum! Tempore at nulla hic assumenda ipsa ut dolor tempora eveniet neque dolore vel 
+                        <img class="filmlogo5" src="/images/film2/logo.png" alt="">
+                    <p class="film5-paragraf">
+                        Lorem ipsum dolor, sit amet consectetur adipisicing elit. Necessitatibus sit eum nostrum nulla fuga sapiente quam hic unde ducimus quis esse, aliquid debitis non soluta iure ipsum facilis blanditiis. Recusandae nobis natus debitis reprehenderit? Neque ipsa perferendis doloremque in nisi alias amet, molestiae quibusdam incidunt similique corrupti labore repudiandae quae itaque repellat, mollitia vero rerum! Tempore at nulla hic assumenda ipsa ut dolor tempora eveniet neque dolore velLorem ipsum dolor, sit amet consectetur adipisicing elit. Necessitatibus sit eum nostrum nulla fuga sapiente quam hic unde ducimus quis esse, aliquid debitis non soluta iure ipsum facilis blanditiis. Recusandae nobis natus debitis reprehenderit? Neque ipsa perferendis doloremque in nisi alias amet
                     </p>
-                    <div class="film2links">
-                        <a  href="https://youtu.be/T5IligQP7Fo?si=Bouxpvy0CqXh0l4h" target="_blank">
+                    <div class="film5links">
+                        <a  href="https://youtu.be/iszwuX1AK6A?si=0nFV8_jeDCuDsSG-" target="_blank">
                             <button class="buttontrailer">
                                 TRAILER
                             </button>
                         </a>
-                        <a href="https://www.imdb.com/title/tt0075314/ratings/?ref_=ext_shr_lnk" target="_blank">
+                        <a href="https://www.imdb.com/title/tt0993846/ratings/?ref_=tt_ov_rt" target="_blank">
                             <img src="/images/Star 2.png" alt="">
                         </a>
-                        <p>8,2/10 <br>
-                            922 mil</p>
+                        <p>8,2
+                            /10 <br>
+                            1,6 mi
+                            </p>
                     </div>
                     </div>
                     <div class="input-sair">
@@ -186,24 +190,27 @@
                 </label>
                
 
-                <input id="filmcheck3" class="filmcheck3" type="radio" name="film">
-                <label class="film3 film" for="filmcheck3">
+                <input id="filmcheck6" class="filmcheck6" type="radio" name="film">
+                <label class="film6 film" for="filmcheck6">
                     <div class="film-content">
-                        <img class="filmlogo3" src="/images/film3/logo.png" alt="">
-                    <p class="film3-paragraf">
-                        Lorem ipsum dolor, sit amet consectetur adipisicing elit. Necessitatibus sit eum nostrum nulla fuga sapiente quam hic unde ducimus quis esse, aliquid debitis non soluta iure ipsum facilis blanditiis. Recusandae nobis natus debitis reprehenderit? Neque ipsa perferendis doloremque in nisi alias amet, molestiae quibusdam incidunt similique corrupti labore repudiandae quae itaque repellat, mollitia vero rerum! Tempore at nulla hic assumenda ipsa ut dolor tempora eveniet neque dolore vel 
+                        <img class="filmlogo6" src="/images/film3/logo.png" alt="">
+                    <p class="film6-paragraf">
+                        Lorem ipsum dolor, sit amet consectetur adipisicing elit. Necessitatibus sit eum nostrum nulla fuga sapiente quam hic unde ducimus quis esse, aliquid debitis non soluta iure ipsum facilis blanditiis. Recusandae nobis natus debitis reprehenderit? Neque ipsa perferendis doloremque in nisi alias amet, molestiae quibusdam incidunt similique corrupti labore repudiandae quae itaque repellat, mollitia vero rerum! Tempore at nulla hic assumenda ipsa ut dolor tempora eveniet neque dolore velLorem ipsum dolor, sit amet consectetur adipisicing elit. Necessitatibus sit eum nostrum nulla fuga sapiente quam hic unde ducimus quis esse, aliquid debitis non soluta iure ipsum facilis blanditiis. Recusandae nobis natus debitis reprehenderit? Neque ipsa perferendis doloremque in nisi alias amet
                     </p>
-                    <div class="film3links">
-                        <a  href="https://youtu.be/T5IligQP7Fo?si=Bouxpvy0CqXh0l4h" target="_blank">
+                    <div class="film6links">
+                        <a  href="https://youtu.be/v8yrZSkKxTA?si=rsyzQzGeqMwhIqBs" target="_blank">
                             <button class="buttontrailer">
                                 TRAILER
                             </button>
                         </a>
-                        <a href="https://www.imdb.com/title/tt0075314/ratings/?ref_=ext_shr_lnk" target="_blank">
+                        <a href="https://www.imdb.com/title/tt1130884/ratings/?ref_=tt_ov_rt" target="_blank">
                             <img src="/images/Star 2.png" alt="">
                         </a>
-                        <p>8,2/10 <br>
-                            922 mil</p>
+                        <p>
+                            8,2
+                            /10 <br>
+                            1,5 mi
+                            </p>
                     </div>
                     </div>
                     <div class="input-sair">
@@ -240,7 +247,15 @@
         </div>
     </main>
     <footer class="">
-
+        <nav class="c-footer__nav">
+            <a class="c-navf__item" href="#home">HOME</a>
+            <a class="c-navf__item" href="#about">ABOUT</a>
+            <a class="c-navf__item" href="#films">FILMOGRAFY</a>
+            <a class="c-navf__item" href="#contact">CONTACT</a>
+        </nav>
+        <hr>
+        <p>Coded By : <br> Guilherme henrique machado de oliveira RGM: <br>
+        Lucas antonio </p>
     </footer>
     
 
