--- a/index.html
+++ b/index.html
@@ -35,7 +35,19 @@
             <div class="c-about__text--container">
                 <h3 class="c-about__tittle"> About </h3>
                 <p class="c-about__text">
-                    Lorem ipsum dolor sit amet consectetur, adipisicing elit. Dolores, commodi debitis consequatur eius temporibus harum iusto eaque itaque corrupti beatae culpa voluptas, corporis voluptatem placeat ratione magnam similique quos numquam possimus voluptatum voluptatibus, autem ducimus. Amet saepe, aspernatur dolorum vero temporibus, obcaecati facilis maxime ea, impedit quos quasi ipsa quae!, Lorem ipsum dolor sit amet consectetur adipisicing elit. Tenetur non mollitia fuga blanditiis numquam amet neque, ut dolorem vel, itaque perspiciatis iusto aliquam aliquid hic culpa quae vitae veritatis? Sint cum error eos, esse dolore veritatis qui illo harum odio ipsum officia fugit saepe, debitis laudantium temporibus nesciunt facilis voluptates velit illum dolorum! Commodi, repellendus quia neque maiores sunt alias facere fugiat sapiente in tempora eius, impedit officia, repellat magni harum voluptatem esse rem sit quo iste. Modi dolores dignissimos ea nostrum repellendus optio nesciunt repudiandae temporibus nemo quos quasi ipsa quae!, Lorem ipsum dolor sit amet consectetur adipisicing elit. Tenetur non mollitia fuga blanditiis numquam amet neque, ut dolorem vel, itaque perspiciatis iusto aliquam aliquid hic culpa quae vitae veritatis? Sint cum error eos, esse dolore veritatis qui illo harum odio ipsum officia fugit saepe, debitis laudantium temporibus nesciunt facilis voluptates velit illum dolorum! Commodi, repellendus quia neque maiores sunt alias facere fugiat sapiente in tempora eius, impedit officia, repellat magni harum voluptatem esse rem sit quo iste. Modi dolores dignissimos ea nostrum repellendus optio nesciunt repudiandae temporibus nemo blanditiis!
+                    Martin Scorsese é um renomado diretor de cinema americano, conhecido por sua contribuição significativa ao cinema mundial. Nascido em 17 de novembro de 1942, em Nova York, ele começou sua carreira no final dos anos 1960 e rapidamente se destacou com filmes que exploram temas complexos como culpa, redenção, violência e a natureza humana.
+                </p>
+                <p class="c-about__text">
+                    Entre suas obras mais célebres estão "Taxi Driver" (1976), que aborda a alienação urbana, e "Touro Indomável" (1980), um retrato intenso do boxeador Jake LaMotta. Scorsese também dirigiu "Os Bons Companheiros" (1990), uma saga sobre o crime organizado, e "O Lobo de Wall Street" (2013), uma crítica feroz ao capitalismo desenfreado.
+                </p>
+                <p class="c-about__text">
+                    Seu estilo é marcado por uma direção dinâmica, uso inovador da música e uma habilidade única para contar histórias complexas e emocionalmente ricas. Scorsese é um mestre em capturar a essência de seus personagens, muitas vezes trabalhando com atores como Robert De Niro e Leonardo DiCaprio para trazer profundidade e autenticidade às suas performances.
+                </p>
+                <p class="c-about__text">
+                    Além de seu trabalho como diretor, Scorsese é um defensor fervoroso da preservação do cinema e um amante de filmes clássicos. Ele fundou a The Film Foundation em 1990 para restaurar e preservar filmes históricos, demonstrando seu compromisso com a arte cinematográfica além de suas próprias criações.
+                </p>
+                <p class="c-about__text">
+                    Com uma carreira que abrange mais de cinco décadas, Martin Scorsese continua a influenciar e inspirar cineastas em todo o mundo, mantendo-se relevante e inovador em um cenário cinematográfico em constante evolução.
                 </p>
             </div>
         </div>
@@ -254,8 +266,8 @@
             <a class="c-navf__item" href="#contact">CONTACT</a>
         </nav>
         <hr>
-        <p>Coded By : <br> Guilherme henrique machado de oliveira RGM: <br>
-        Lucas antonio </p>
+        <p>Coded By : <br> <br> Guilherme henrique machado de oliveira/RGM: 38781352<br><br>
+            Lucas Antônio Dias/RGM: 38780712</p>
     </footer>
     
 
